--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-100 font-sans">
     <div class="container">
         <div class="card">
-            <h1 class="text-2xl font-semibold mb-4">Image OCR </h1>
+            <h1 class="text-2xl font-semibold mb-4">Image OCR Web App</h1>
 
             <div class="mb-4">
                 <input type="file" id="imageInput" accept="image/*" class="p-2 border rounded-lg w-full">
